@@ -106,7 +106,7 @@
                     <value>
                       <list>
                         <string>my_description</string>
-                        <string>my_translated_validation_state_title</string>
+                        <string>my_translated_validation_state_title_with_error_message</string>
                       </list>
                     </value>
                 </item>
