@@ -14,7 +14,7 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>my_translated_validation_state_title</string> </value>
+            <value> <string>my_translated_validation_state_title_with_error_message</string> </value>
         </item>
         <item>
             <key> <string>message_values</string> </key>
