@@ -1,3 +1,6 @@
+2012-02-02 arnaud.fontaine
+* Perform revalidate automatically rather than requiring a manual action.
+
 2012-02-01 arnaud.fontaine
 * Replace comments by description field in Component_view.
 
